# MainBoardMicroFirmware

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  PI4IOE5V6416.h  README.md  ball-detector.cpp  ball-detector.h  buzzer.cpp  buzzer.h  ioex.cpp  ioex.h  main-board.h  main.c  main.cpp  micro_protocol.h  mikona.cpp  mikona.h  power_monitor.cpp  power_monitor.h  protocol.cpp  protocol.h
.zed/: settings.json  tasks.json
